openshift/samples/deployment-config.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: petclinic
  namespace: petclinic
spec:
  replicas: 2
  selector:
    app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      containers:
        - name: petclinic
          image: image-registry.openshift-image-registry.svc:5000/petclinic/petclinic:latest
          ports:
            - containerPort: 8080
  triggers:
    - type: ConfigChange
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames: [petclinic]
        from:
          kind: ImageStreamTag
          name: petclinic:latest
